Adjusted min-width for nav button on mobile; sticky fix for iOS devices; bug ident for FAB.

--- a/css/_sp-modifications.scss
+++ b/css/_sp-modifications.scss
@@ -9,3 +9,13 @@
     width: 100vw;
   }
 }
+
+#s4-workspace {
+  overflow: unset;
+  nav.navbar-inverse {
+    position: -webkit-sticky;
+    button {
+      min-width: unset;
+    }
+  }
+}
